# not-a-connect4

./: .gitignore  README.md  default.nix  docker.nix  nac4.cabal  nixpkgs.nix  stack.yaml
.github/workflows/: nix.yml  stack.yml
app/: nac4-client.hs  nac4-server.hs
src/NaC4/: Game.hs  Params.hs  Protocol.hs  ProtocolImpl.hs  Utils.hs
src/NaC4/Client/: Bot.hs
src/NaC4/Server/: Config.hs  HttpApp.hs  Model.hs  Params.hs  Runner.hs  View.hs  WsApp.hs  WsManager.hs
test/NaC4/: GameSpec.hs  ProtocolImplSpec.hs  ProtocolSpec.hs
test/NaC4/Client/: BotSpec.hs
test/NaC4/Server/: ModelSpec.hs
tmp/: Makefile  doc.txt  games-chart.json  index.html  mychart.json  users-chart.json  users-data.json
tmp/games/: data.json  mychart.json
tmp/time/: data.json  mychart.json
tmp/users/: data.json
tmp/vega/: games-chart.json  index.html  results-chart.json  results.json  time-chart.json  users-chart.json
